helloworld/app-rc1.yaml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-rc1
  namespace: helloworld
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
        release: rc1
    spec:
      containers:
      - name: echo
        image: bettercode/echoserver:1.8m 
        ports:
        - containerPort: 8080
