helloworld/busybox.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: busybox
  namespace: helloworld
  labels:
    k8s-app: busybox
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  selector:
    matchLabels:
      k8s-app: busybox
  template:
    metadata:
      labels:
        k8s-app: busybox
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ''
    spec:
      containers:
      - name: busybox
        image: busybox:1.29-glibc
        command:
          - sleep
          - "3600"
