helloworld/svc-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-v1
  labels:
    app: hello
  namespace: helloworld
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echo
    release: rc2
